--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -5,8 +5,17 @@
 
 }
 
+.section-title {
+    font-size: 3.5rem;
+}
+
 @media screen and (max-width: 600px) {
     .section {
         height: 100vh;
+    }
+
+    .section-title {
+        font-size: 2rem;
+        top: 2rem;
     }
 }
