--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -14,8 +14,8 @@
         flex-direction: column;
         gap: 1rem;
         & > p {
-            font-size: 1.5rem;
-            line-height: 2rem;
+            font-size: 2rem;
+            line-height: 2;
         }
     }
     &__image {
