--- a/src/app/components/about/about.scss
+++ b/src/app/components/about/about.scss
@@ -3,7 +3,7 @@
     top: 50%;
     transform: translateY(-50%);
     display: flex;
-    gap: 2rem;
+    gap: 5rem;
     align-items: center;
     justify-content: center;
     padding: 0 2rem 0 2rem;
@@ -15,13 +15,12 @@
         gap: 1rem;
         & > p {
             font-size: 2rem;
-            line-height: 2;
+            line-height: 1.5;
         }
     }
     &__image {
         position: relative;
-        width: 20rem;
-        height: 20rem;
+        height: 40rem;
         background-color: salmon;
 
         & > img {
@@ -36,14 +35,18 @@
 @media screen and (max-width: 600px) {
     .about__container {
         flex-direction: column;
+        gap: 1rem;
 
+        &__image { 
+            height: 25rem;
+        }
         &__text {
             & > h2 {
                 font-size: 2rem;
             }
     
             & > p {
-                font-size: 1rem;
+                font-size: 1.2rem;
             }
         }
     }
