--- a/src/app/components/navigation/navigation.scss
+++ b/src/app/components/navigation/navigation.scss
@@ -6,10 +6,12 @@
     width: 100%;
     background-color: #FAF9F6;
     color: #060606;
-    opacity: 85%;
+    opacity: 90%;
     z-index: 999;
     font-size: 1.5rem;
     font-weight: bold;
+    display: flex;
+    justify-content: space-between;
 
     &__sections {
         height: 100%;
@@ -17,6 +19,20 @@
         flex-direction: row;
         align-items: center;
 
+    }
+
+    &__icons {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+
+        & > a > svg {
+            font-size: 4rem;
+            padding: 0 .5rem 0 .5rem
+        }
     }
 }
 
@@ -41,6 +57,10 @@ li {
     .navigationBar {
         width: 100%;
         font-size: 1rem;
+
+        &__icons {
+            gap: .8rem;
+        }
     }
 
     li {
