--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -5,11 +5,43 @@
     gap: 1rem;
     padding: 0 2rem 0 2rem;
     top: 7rem;
+    font-size: 1.5rem;
 
     &__container {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+    }
+}
+
+.project-description {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+
+    &__icon{
+        display: flex;
+        justify-content:flex-start;
+        align-items: center;
+
+        & > a > span {
+            font-size: 1rem;
+            font-style: italic;
+        }
+
+        & > a > svg {
+            font-size: 4rem;
+        }
+    }
+}
+
+.chips {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    & > Chip {
+        font-size: 2rem;
     }
 }
 
@@ -21,5 +53,9 @@
 @media screen and (max-width: 600px) {
     .projects {
         top: 7rem;
+    }
+
+    .chips {
+        gap: .6rem;
     }
 }
