removal of @mui/styles, replaced by @emotion/react

--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -50,6 +50,10 @@
     top:0;
 }
 
+MuiChip-root, MuiChip-label {
+    font-size: 2rem !important;
+}
+
 @media screen and (max-width: 600px) {
     .projects {
         top: 7rem;
