--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -14,7 +14,7 @@
 .section-title {
     font-size: 3.5rem;
     position:relative;
-    top:5rem;
+    //top:rem;
     padding: 0 2rem 0 2rem;
 }
 
@@ -25,6 +25,5 @@
 
     .section-title {
         font-size: 2rem;
-        top: 2rem;
     }
 }
