--- a/src/app/components/sections/hero/hero.scss
+++ b/src/app/components/sections/hero/hero.scss
@@ -48,6 +48,12 @@
     font-size:4rem;
 }
 
+.anchor {
+    scroll-margin-top: 5rem;
+    top: 0rem;
+    position: relative;
+}
+
 
 @media screen and (max-width: 600px) {
 
