--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -20,7 +20,7 @@
 
 @media screen and (max-width: 600px) {
     .section {
-        height: 100vh;
+        height: calc(100vh - 5rem);
     }
 
     .section-title {
