--- a/src/app/components/sections/contact/contact.scss
+++ b/src/app/components/sections/contact/contact.scss
@@ -8,6 +8,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 0 3rem 0 3rem;
+    max-width: 50rem;
+
+    & > form {
+        width: 100%;
+    }
 }
 
 .btn {
