--- a/src/app/components/sections/about/about.scss
+++ b/src/app/components/sections/about/about.scss
@@ -1,54 +1,59 @@
 .about__container {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    gap: 5rem;
-    align-items: center;
-    justify-content: center;
-    padding: 0 2rem 0 2rem;
-
-    &__text {
-        max-width: 50rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        & > p {
-            font-size: 2rem;
-            line-height: 1.5;
-        }
-    }
-    &__image {
-        position: relative;
-        height: 40rem;
-        background-color: salmon;
-
-        & > img {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-        }
-    }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
+  text-align: center;
+  min-height: 80vh;
 }
 
+.about__container__text {
+  max-width: 50rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
+  h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #333;
+  }
+
+  p {
+    font-size: 1.8rem;
+    color: #555;
+    margin-bottom: 1rem;
+  }
+}
+
+.about__container__image {
+  height: 40rem;
+
+  img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+}
 
 @media screen and (max-width: 600px) {
-    .about__container {
-        flex-direction: column;
-        gap: 1rem;
+  .about__container {
+    flex-direction: column;
+  }
 
-        &__image { 
-            height: 25rem;
-        }
-        &__text {
-            & > h2 {
-                font-size: 2rem;
-            }
-    
-            & > p {
-                font-size: 1.2rem;
-            }
-        }
-    }
+.about__container__text {
+  h1 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+    margin-bottom: 0;
+  }
+}
+
+  .about__container__image {
+    height: 25rem;
+  }
 }
