--- a/src/app/components/sections/contact/contact.scss
+++ b/src/app/components/sections/contact/contact.scss
@@ -16,7 +16,46 @@
     }
 }
 
+.successMessage {
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    max-width: 300px;
+    transform: translateX(0);
+    opacity: 1;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.noDisplay {
+    display: none;
+}
+
+.success-icon {
+    animation: bounce 0.6s ease-in-out;
+    margin-bottom: 20px;
+}
+
 .btn {
     font-family: '__Inter_e66fe9', '__Inter_Fallback_e66fe9';
     font-size: 1.5rem;
 }
+
+.card {
+    padding: 5rem 3rem;
+}
+
+.card-title {
+    font-size: 24px; /* Adjust the font size as needed */
+    font-weight: bold;
+    color: #333; /* Change the color to your preference */
+    margin-bottom: 10px;
+  }
+  
+  /* Update the card message styles */
+  .card-message {
+    font-size: 18px; /* Adjust the font size as needed */
+    color: #555; /* Change the color to your preference */
+  }
