--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 
 // 5. Components (Now that themes are loaded)
 @import 'components/navbar';
+@import 'components/personal-card';
 
 // 6. Pages
 @import 'pages/home';
