--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,8 +1,18 @@
-<nav class="navbar">
-  <h1 class="navbar__logo"><a href="/">tiago:murer</a></h1>
-  <ul class="navbar__buttons">
-    <li><a href="/" class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
-    <li><a href="/about/" class="{% if page.url == '/about/' %}active{% endif %}">About</a></li>
-    <li><a href="/projects/" class="{% if page.url == '/projects/' %}active{% endif %}">Projects</a></li>
-  </ul>
-</nav>
+<script src="/scripts/navbar.js"></script>
+
+ <div class="nav-wrapper">
+  <nav class="navbar">
+    <h1 class="navbar__logo"><a href="/">tiago:murer</a></h1>
+    <div class="menu-toggle" id="mobile-menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <ul class="nav no-search">
+      <li><a href="/" class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
+      <li><a href="/about/" class="{% if page.url == '/about/' %}active{% endif %}">About</a></li>
+      <li><a href="/projects/" class="{% if page.url == '/projects/' %}active{% endif %}">Projects</a></li>
+    </ul>
+  </nav>
+  </div>
+
