--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -52,7 +52,7 @@ textarea {
 
 /* Provide some basic spacing for elements */
 h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 1em; /* Add spacing below headings */
+    margin-bottom: 0; /* Add spacing below headings */
 }
 
 p {
