--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,9 @@
 .home-content {
     display: flex;
-    flex-direction: row;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 
     &__col {
         flex-grow: 1;      // Allows columns to grow equally
@@ -9,23 +12,25 @@
 
         &--1 {
             height: 40vh;
+            position: fixed;
+
+            @media (max-width: 768px) {
+                position: static; // Remove fixed positioning on small screens
+                width: 100%;      // Make the column take full width
+                height: auto;     // Adjust the height as needed
+                margin-bottom: 20px; // Space between columns
+            }
         }
 
         &--2 {
             height:200vh;
             border: 1px dashed #ccc;
+            margin-left: 50%;
+
+            @media (max-width: 768px) {
+                width: 100%; // Full width in smaller screens
+                margin: 0;
+            }
         }
     }
-}
-
-.personal-card {
-    position: fixed;
-    border: 1px solid dashed;
-    width: 400px; //erase
-    height: 600px; //erase
-}
-
-.personal-data {
-    width: 400px;
-    height: 2000px;
 }
