fixing responsiveness and navbar ui

--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -8,7 +8,7 @@
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
-    <ul class="nav no-search">
+    <ul class="navbar__buttons">
       <li><a href="/" class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
       <li><a href="/about/" class="{% if page.url == '/about/' %}active{% endif %}">About</a></li>
       <li><a href="/projects/" class="{% if page.url == '/projects/' %}active{% endif %}">Projects</a></li>
