--- a/src/styles/components/_personal-card.scss
+++ b/src/styles/components/_personal-card.scss
@@ -21,4 +21,17 @@
             margin: 0;
         }
     }
+
+}
+
+@media only screen and (max-width: 768px) {
+    .personal-card {
+        p {
+            font-size: 25px;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+    }
 }
