--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+  {% block favicon %}{% endblock %}
 </head>
 <body>
   <header>
