--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -3,6 +3,9 @@ title: About Me
 layout: layouts/base.njk
 permalink: /about/
 ---
+{% block favicon %}
+<link rel="icon" href="/images/favicon/about.ico" type="image/x-icon">
+{% endblock %}
 
 {% block content %}
   <h1>About Me</h1>
