--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -3,6 +3,9 @@ title: Home
 layout: layouts/base.njk
 permalink: /
 ---
+{% block favicon %}
+<link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+{% endblock %}
 
 {% block content %}
   <div class="home-content">
