--- a/src/pages/projects.njk
+++ b/src/pages/projects.njk
@@ -3,6 +3,9 @@ title: My Projects
 layout: layouts/base.njk
 permalink: /projects/
 ---
+{% block favicon %}
+<link rel="icon" href="/images/favicon/projects.ico" type="image/x-icon">
+{% endblock %}
 
 {% block content %}
   <h3> Projects </h3>
