--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,4 +13,13 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "EB Garamond", serif;
     font-optical-sizing: auto;
     font-style: normal;
+    margin-bottom: 20px;
+}
+
+hr {
+    margin-bottom: 20px;
+}
+
+.subtitle {
+    font-size: 25px;
 }
