--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,8 @@
 //@import 'themes/light';
 
 // 5. Components (Now that themes are loaded)
+@import 'components/hero';
+@import 'components/job-entry';
 @import 'components/navbar';
 @import 'components/personal-card';
 
