--- a/src/_includes/partials/personal-card.njk
+++ b/src/_includes/partials/personal-card.njk
@@ -1,9 +1,9 @@
 <article class="personal-card">
     {% image "src/images/profpic.jpg", "A nice picture of myself at Buenos Aires", [300, 600], ["jpeg", "webp"], "personal-card__img" %}
-    <h1 class="personal-card__title">Hi, I'm Tiago ✌️</h1>
+    <h1 class="personal-card__title">Hi, I'm Tiago, ✌️</h1>
     <div class="personal-card__paragraph">
-        <p>I am a Software Engineer based in São Paulo - 🇧🇷.</p>
-        <p>Currently working for Tata Consultancy Services.</p>
+        <p>a Software Engineer based in São Paulo - 🇧🇷.</p>
+        <p>Currently @ Tata Consultancy Services.</p>
     </div>
 
 </article>
