--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -13,7 +13,15 @@ permalink: /
       {% include 'partials/personal-card.njk' %}
     </div>
     <div class="home-content__col home-content__col--2">
-      <span class="personal-data"></span>
+      {% include 'partials/hero.njk' %}
+      <hr>
+      <h3 class="subtitle">Places I worked at</h3>
+      <div class="work-places">
+        {% for job in collections.jobs %}
+          {% include 'partials/job-entry.njk' %}
+        {% endfor %}
+      </div>
+      <hr>
     </div>
   </div>
 {% endblock %}
