--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -23,13 +23,20 @@
         }
 
         &--2 {
-            height:200vh;
-            border: 1px dashed #ccc;
             margin-left: 50%;
+            display: flex;
+            flex-direction: column;
 
             @media (max-width: 768px) {
                 width: 100%; // Full width in smaller screens
                 margin: 0;
+            }
+
+            & .work-places {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                margin-bottom: 30px;
             }
         }
     }
