--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -7,9 +7,9 @@
       <li><a href="/contact/">Contact</a></li>
     </ul>
     <div class="social-media">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="https://github.com/tsmurer" target="_blank">GitHub</a>
       <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/tiagomurer/" target="_blank">LinkedIn</a>
     </div>
   </div>
 </footer>
