--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -22,6 +22,7 @@ permalink: /
         {% endfor %}
       </div>
       <hr>
+      <h3 class="subtitle">Things I can do</h3>
     </div>
   </div>
 {% endblock %}
