--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -37,6 +37,12 @@
                 flex-direction: column;
                 gap: 20px;
                 margin-bottom: 30px;
+
+                &:hover .job-entry:not(:hover) {
+                    opacity: 0.5;
+                    filter: blur(.5px);
+                    transition: all 0.3s ease;
+                }
             }
         }
     }
