some spacing changes

--- a/src/pages/projects.njk
+++ b/src/pages/projects.njk
@@ -8,5 +8,7 @@ permalink: /projects/
 {% endblock %}
 
 {% block content %}
-  <h3> Projects </h3>
+  <h1>Projects</h1>
+  <p>This section is under construction</p>
+  <p>Please be patient</p>
 {% endblock %}
