--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -12,6 +12,7 @@
       <li><a href="/" class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
       <li><a href="/about/" class="{% if page.url == '/about/' %}active{% endif %}">About</a></li>
       <li><a href="/projects/" class="{% if page.url == '/projects/' %}active{% endif %}">Projects</a></li>
+      <li><a href="/contact/" class="{% if page.url == '/contact/' %}active{% endif %}">Contact</a></li>
     </ul>
   </nav>
   </div>
