--- a/src/styles/components/_job-entry.scss
+++ b/src/styles/components/_job-entry.scss
@@ -5,6 +5,11 @@
     align-items: center;
     gap: 40px;
 
+    @media only screen and (max-width: 768px) {
+        gap: 10px;
+        flex-direction: column;
+    }
+
     &__icon {
         stroke: $text-color;
         width: 40px;
