--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -22,7 +22,12 @@ permalink: /
         {% endfor %}
       </div>
       <hr>
-      <h3 class="subtitle">Things I can do</h3>
+      <div class="subtitle-and-btn">
+        <h3 class="subtitle">Things I can do</h3>
+        <span id="toggle-all-accordions">expand all</span>
+      </div>
+      
+      {# TODO: open all/close all button #}
       <div class="accordions">
         {% for skill in skills.skills %}
            {% include 'partials/accordion.njk' %}
@@ -30,4 +35,5 @@ permalink: /
       </div>
     </div>
   </div>
+  <script src="../scripts/accordions.js"></script>
 {% endblock %}
