--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -18,5 +18,23 @@
         margin: 0;
     }
 
+    &__tags {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        flex-wrap: wrap;
+        white-space: nowrap;
+    }
 
+    &__description, .project__screenshots, .project__tags {
+        padding-left: 15px;
+    }
+
+
+}
+
+@media (max-width: 768px) {
+    .project__tags {
+        gap: 5px;
+    }
 }
