--- a/src/_includes/partials/accordion.njk
+++ b/src/_includes/partials/accordion.njk
@@ -1,5 +1,5 @@
 <details class="accordion">
-    <summary class="accordion__title">{{ skill.category }}</summary>
+    <summary class="accordion__title"><strong>{{ skill.category }}</strong></summary>
     <ul class="accordion__content">
         {% for sk in skill.skillset %}
             <li class="accordion__content__item">{{ sk }}</li>
